<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SeierFriendApp</string>
    <string name="title_section1">User info</string>
    <string name="title_section2">Points status</string>
    <string name="title_section3">Vouchers</string>
    <string name="title_section4">BLE test</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>

    <string name="txtTitle">SeierFriend</string>
    <string name="txtUserName">username/email</string>
    <string name="txtPassword">password</string>
    <string name="btnSignIn">Sign in</string>
    <string name="btnRegister">Register</string>
    <string name="btnForgotPassword">Forgot password?</string>
    <string name="txtPointsHeading">Seier Friends</string>
    <string name="txtCurrentPoints">10.250</string>
    <string name="txtPointsLabel">points</string>
    <string name="txtFriendName">Marcus Bach</string>
    <string name="txtFriendStatusLabel">Friend status:</string>
    <string name="txtFriendStatus">Premium Friend</string>
    <string name="uriRegister">"http://www.shoppingcityseiersberg.at/de/registrieren.php"</string>
    <string name="wsURI">"http://evodeployment.evolaris.net:9000/v1/status/"</string>
    <string name="voucherURI">"http://evodeployment.evolaris.net:9000/v1/offers/"</string>
    <string name="loginURI">"http://evodeployment.evolaris.net:9000/v1/login/"</string>
    <string name="checkInURI">"http://evodeployment.evolaris.net:9000/v1/check-in/"</string>
    <string name="enter_tag_id">Enter tag ID</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="loginProgressDialogTitle">Loading</string>
    <string name="loginProgressDialogMessage">Please wait...</string>
    <string name="friendStatus1">Basic friend</string>
    <string name="friendStatus2">Top friend</string>
    <string name="friendStatus3">Premium friend</string>
    <string name="notificationTitle">SeierFriend</string>
    <string name="notificationMessage">Welcome! You\'ve checked in. Claim your points now.</string>
    <string name="wrongTagId">Please enter valid TagId</string>
    <string name="wrongUsernameAndPass">Please enter valid username and password.</string>
    <string name="label_voucher_store">Store:</string>
    <string name="label_voucher_from">Valid from:</string>
    <string name="label_voucher_to">Valid until:</string>
    <string name="toast_login">Please login.</string>
    <string name="toast_tagid">Please enter valid TagId </string>
    <string name="tag_label">Enter Tag ID</string>

    <string-array name="nav_drawer_items">
        <item>Point status</item>
        <item>User info</item>
        <item>Vouchers</item>
        <item>Logout</item>
    </string-array>

    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_photos</item>
        <item>@drawable/ic_people</item>
        <item>@drawable/ic_pages</item>
        <item>@drawable/ic_home</item>
    </array>


    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>
</resources>