<android.support.v4.widget.DrawerLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res/hr.foi.seierfriendapp">

    <!-- Framelayout to display Fragments -->
    <FrameLayout
            android:id="@+id/frame_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <TextView
                    android:id="@+id/txtPointsHeading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="26dp"
                    android:text="@string/txtPointsHeading"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textStyle="bold"
                    android:textColor="#444"
                    />

            <com.pascalwelsch.holocircularprogressbar.HoloCircularProgressBar
                    android:id="@+id/holoCircularProgressBar"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="72dp"
                    app:progress="0.6"
                    app:progress_background_color="#000"
                    app:progress_color="#f39c12"/>

            <TextView
                    android:id="@+id/txtCurrentPoints"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="140dp"
                    android:text="@string/txtCurrentPoints"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textStyle="bold|italic"
                    android:textSize="40sp"
                    android:textColor="#444"
                    />
            <TextView
                    android:id="@+id/txtPointsLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="190dp"
                    android:text="@string/txtPointsLabel"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textStyle="normal"
                    android:textSize="22sp"
                    android:textColor="#444"
                    />

            <TextView
                    android:id="@+id/txtFriendName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="300dp"
                    android:text="@string/txtFriendName"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textSize="30sp"
                    android:textStyle="normal"
                    android:textColor="#444"
                    />

            <TextView
                    android:id="@+id/txtFriendStatusLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="340dp"
                    android:text="@string/txtFriendStatusLabel"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textSize="20sp"
                    android:textStyle="normal"
                    />
            <TextView
                    android:id="@+id/txtFriendStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="360dp"
                    android:text="@string/txtFriendStatus"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textSize="38sp"
                    android:textStyle="bold"
                    android:textColor="#444"
                    />
        </RelativeLayout>
    </FrameLayout>
    <!-- Listview to display slider menu -->
    <ListView
            android:id="@+id/list_slidermenu"
            android:layout_width="240dp"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:choiceMode="singleChoice"
            android:divider="@color/list_divider"
            android:dividerHeight="1dp"
            android:listSelector="@drawable/list_selector"
            android:background="@color/main_background"/>
</android.support.v4.widget.DrawerLayout>